--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                                                             style="margin-top:0px;margin-bottom:0px;">
                                                                         <rs-module-wrap id="rev_slider_1_1_wrapper"
                                                                                         data-source="gallery"
-                                                                                        style="background: transparent; padding: 0px; margin: 0px auto; height: 900px; visibility: visible; position: absolute; overflow: visible; width: 1349px; left: 0px;">
+                                                                                        style="background: transparent; padding: 0px; margin: 0px auto; height: 900px; visibility: visible; position: absolute; overflow: visible; left: 0;">
                                                                             <rs-module id="rev_slider_1_1"
                                                                                        style="height: 900px; max-height: 900px; margin-bottom: 0px; margin-top: 0px;"
                                                                                        data-version="6.2.17"
