--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
                             <ul class="lte-social-icons-list">
                                 <li><a href="#"><span
                                         class="lte-header">Phone:</span><span
-                                        class="lte-txt">+49078-039-23-11<br> </span></a>
+                                        class="lte-txt">+37499424777<br> </span></a>
                                 </li>
                             </ul>
                         </div>
