--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="logo"></div>
     <div class="text">
-        <p>Պատվերների համաչ զանգահարեք՝</p>
+        <p>Պատվերների համար զանգահարեք՝</p>
         <a href="tel:+374 (099) 424-777" class="phone-number">+374 (099) 424-777</a>
     </div>
 </div>
